--- a/Common/Languages/English/Keyed/NCRKeyed.xml
+++ b/Common/Languages/English/Keyed/NCRKeyed.xml
@@ -2,5 +2,5 @@
 <LanguageData>
 	<!-- California Grizzlies -->
 	<FCP_LetterLabel_GrizzliesPass>California grizzlies</FCP_LetterLabel_GrizzliesPass>
-	<FCP_Letter_GrizzliesPass>A small herd of ranger ricks have entered the area and converted your colony into a member of the Rimworld Collaboration Project (desc TBD).\n\nThe bears will leave the area in a few days.</FCP_Letter_GrizzliesPass>
+	<FCP_Letter_GrizzliesPass>A large bear has come to your settlement. It has 2 large heads, massive paws and thick fur. This animal is a California grizzly bear, known from legend and extremly rare. It is the main symbol of the New California Republic. Depending on your thoughts or ideologies this is a great omen! Or a hint of death...</FCP_Letter_GrizzliesPass>
 </LanguageData>
